# tshirt_designer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  app.py  brainstorm.py  config.py  gemini.md  generator.py  main.py  output.py  prompt_builder.py  prompts.toml  pyproject.toml  test_gemini_connection.py  tshirt_designer.code-workspace
.claude/commands/: commit.md  resume.md  tune-prompts.md
agents/: brainstorm_agent.py  finalize_agent.py  image_agent.py  prompt_agent.py
docs/: workflow_detail.mmd  workflow_overview.mmd
docs/superpowers/plans/: 2026-04-13-aspect-ratio-resolution.md  2026-04-13-optional-ideation.md  2026-04-13-workflow-diagrams.md
docs/superpowers/specs/: 2026-04-13-aspect-ratio-resolution-design.md  2026-04-13-optional-ideation-design.md  2026-04-13-workflow-diagrams-design.md
skills/: output.py
src/: background.py  brainstorm.py  client.py  contrast.py  finalize.py  finalize_agent.py  image.py  output.py  presets.py  printify.py  prompt_agent.py  prompt_templates.py  prompts.py  retry.py  settings.py  vectorize.py
static/: app.js
templates/: index.html  login.html  prompt_sidecar.md  variant_prompts.md
tests/: test_background.py  test_bp_fields.py  test_bp_images.py  test_brainstorm.py  test_brands.py  test_image.py  test_output.py  test_presets.py  test_printify.py  test_printify_304.py  test_printify_304_2.py  test_printify_headers.py  test_prompt_templates.py  test_routes.py
