[project]
name = "tshirt-designer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.8.0",
    "onnxruntime>=1.17.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "rembg>=2.0.50",
    "streamlit>=1.56.0",
]
