[project]
name = "tshirt-designer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.8.0",
    "gradio>=5.0.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "vtracer>=0.6.15",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "ARG", "SIM"]
ignore = ["E501"]  # long lines acceptable in Gradio layout code
